# futarchy

./: .gitignore  Anchor.toml  justfile
programs/arb_bot/: Cargo.toml
programs/arb_bot/src/: error.rs  lib.rs
programs/arb_bot/src/instructions/: conditional_spot_arb.rs  mod.rs
programs/meteora_pools/: Cargo.toml  idl.json  types.ts
programs/meteora_pools/src/: lib.rs
scripts/: crankTwap.ts  downloadAccountInfo.ts  downloadProgramSo.ts  getMeteoraAccounts.ts  main.ts
scripts/account_configs/: meteora_accounts.json
tests/: arbBot.ts
tests/accounts/meteora_meta_usdc_pool/: aVault.json  aVaultLpMint.json  adminTokenBFee.json  bVault.json  meteoraPool.json  tokenAMint.json  tokenBMint.json
tests/utils/: loadAccountInfo.ts
