[package]
name = "meteora_pools"
version = "0.1.0"
description = "CPI to meteora pools program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_pools"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "=0.3.1"
anchor-lang = "0.29.0"
